# coulombgalore

./: .codedocs  .gitignore  .zenodo.json  CMakeLists.txt  Doxyfile  LICENSE  README.md  coulombgalore.h
include/coulombgalore/: all.h  all.hpp  core.h  ewald.h  ewald.hpp  ewald_truncated.hpp  fanourgakis.h  fanourgakis.hpp  fennell.h  fennell.hpp  plain.hpp  poisson.h  poisson.hpp  qpotential.hpp  reactionfield.hpp  splined.hpp  wolf.h  wolf.hpp  zahn.h  zahn.hpp  zerodipole.h  zerodipole.hpp
src/: coulomb.h  example.cpp  unittests.cpp
test/: example.cpp  unittests.cpp
